--- a/angular.json
+++ b/angular.json
@@ -28,6 +28,8 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -91,6 +93,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -124,5 +127,8 @@
       }
     }
   },
-  "defaultProject": "MedicalAssistant-Web"
+  "defaultProject": "MedicalAssistant-Web",
+  "cli": {
+    "analytics": "a36d507e-387b-4564-8d79-934ebdd973c0"
+  }
 }
