--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "bootstrap": "^4.5.3",
     "bootstrap-icons": "^1.2.1",
+    "jquery": "^3.5.1",
+    "moment": "^2.29.1",
     "rxjs": "~6.6.0",
     "rxjs-compat": "^6.6.3",
     "tslib": "^2.0.0",
